--- a/test/docs/dummy.yml
+++ b/test/docs/dummy.yml
@@ -150,10 +150,9 @@ components:
       payload:
         $ref: "#/components/schemas/dummyInfo"
       examples:
-        - one:
-            prop1: option1
-            sentAt: 2020-01-26T13:00:00Z
-        - two:
+        - headers:
+            my-app-header: 12
+          payload:
             prop1: option1
             sentAt: 2020-01-31T13:24:53Z
 
