chore(release): use first parser major release in rc 13 (#433)

--- a/test/docs/dummy.yml
+++ b/test/docs/dummy.yml
@@ -150,12 +150,17 @@ components:
       payload:
         $ref: "#/components/schemas/dummyInfo"
       examples:
-        - one:
-            prop1: option1
-            sentAt: 2020-01-26T13:00:00Z
-        - two:
+        - headers:
+            my-app-header: 12
+          payload:
             prop1: option1
             sentAt: 2020-01-31T13:24:53Z
+        - headers:
+            my-app-header: 13
+        - payload:
+            prop1: option2
+            sentAt: 2020-01-31T13:24:53Z
+          
 
   schemas:
     dummyCreated:
