--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "ag": "./cli.js"
   },
   "engines": {
-    "node": ">=12.16",
-    "npm": ">=6.13.7"
+    "node": ">12.16 <15",
+    "npm": ">6.13.7 <7"
   },
   "scripts": {
     "test": "jest --coverage",
@@ -71,17 +71,17 @@
   "devDependencies": {
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/github": "^7.0.4",
-    "@semantic-release/npm": "^7.0.3",
+    "@semantic-release/npm": "^7.0.6",
     "@semantic-release/release-notes-generator": "^9.0.1",
     "chokidar": "^3.4.0",
-    "conventional-changelog-conventionalcommits": "^4.2.3",
+    "conventional-changelog-conventionalcommits": "^4.4.0",
     "eslint": "^6.8.0",
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-sonarjs": "^0.5.0",
     "jest": "^25.5.0",
     "jsdoc-to-markdown": "^5.0.0",
     "markdown-toc": "^1.2.0",
-    "semantic-release": "^17.0.4",
+    "semantic-release": "^17.2.2",
     "semantic-release-slack-bot": "^1.5.0"
   },
   "release": {
