--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@asyncapi/generator",
-  "version": "1.0.0-rc.15",
+  "version": "1.0.0",
   "description": "The AsyncAPI generator. It can generate documentation, code, anything!",
   "main": "./lib/generator.js",
   "bin": {
@@ -49,10 +49,9 @@
   "dependencies": {
     "@asyncapi/avro-schema-parser": "^0.2.0",
     "@asyncapi/openapi-schema-parser": "^2.0.0",
-    "@asyncapi/parser": "v1.0.1",
+    "@asyncapi/parser": "1.1.0",
     "@asyncapi/raml-dt-schema-parser": "^2.0.0",
     "ajv": "^6.10.2",
-    "all-contributors-cli": "^6.14.2",
     "commander": "^6.1.0",
     "filenamify": "^4.1.0",
     "fs.extra": "^1.3.2",
@@ -82,7 +81,8 @@
     "jsdoc-to-markdown": "^5.0.0",
     "markdown-toc": "^1.2.0",
     "semantic-release": "^17.2.2",
-    "semantic-release-slack-bot": "^1.5.0"
+    "semantic-release-slack-bot": "^1.5.0",
+    "all-contributors-cli": "^6.14.2"
   },
   "release": {
     "branches": [
