--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "@asyncapi/openapi-schema-parser": "^2.0.0",
     "@asyncapi/parser": "^1.1.1",
     "@asyncapi/raml-dt-schema-parser": "^2.0.0",
+    "@babel/preset-env": "^7.12.7",
     "ajv": "^6.10.2",
+    "asyncAPISDK": "file://./../generator-react-sdk",
     "commander": "^6.1.0",
     "filenamify": "^4.1.0",
     "fs.extra": "^1.3.2",
