--- a/.github/workflows/pull-request-testing.yml
+++ b/.github/workflows/pull-request-testing.yml
@@ -1,11 +1,13 @@
 name: Pull request testing
 
 on:
-  pull_request
+  pull_request:
+    types: [opened, reopened, synchronize, ready_for_review]
 
 jobs:
-  release:
-    name: 'Run linter and tests'
+  test_pr:
+    if: github.event.pull_request.draft == false
+    name: 'Testing pull request'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
