--- a/package.json
+++ b/package.json
@@ -51,8 +51,8 @@
     "@asyncapi/openapi-schema-parser": "^2.0.0",
     "@asyncapi/parser": "^1.1.1",
     "@asyncapi/raml-dt-schema-parser": "^2.0.0",
+    "@asyncapi/generator-react-sdk": "^0.1.0",
     "ajv": "^6.10.2",
-    "asyncAPISDK": "file://./../generator-react-sdk",
     "commander": "^6.1.0",
     "filenamify": "^4.1.0",
     "fs.extra": "^1.3.2",
