--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@asyncapi/openapi-schema-parser": "^2.0.0",
     "@asyncapi/parser": "^1.2.0",
     "@asyncapi/raml-dt-schema-parser": "^2.0.0",
+    "@asyncapi/generator-react-sdk": "^0.1.1",
     "ajv": "^6.10.2",
     "commander": "^6.1.0",
     "filenamify": "^4.1.0",
