--- a/.github/workflows/update-docs-on-docs-commits.yml
+++ b/.github/workflows/update-docs-on-docs-commits.yml
@@ -19,14 +19,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Regenerate docs
-        run: npm run docs
-      - name: Generate README ToC
-        run: npm run gen-readme-toc
+        run: npm run generate:assets
       - name: Create Pull Request with updated docs
         # PR should be created within this GH action only if it is a docs: commit
         # Otherwise it will conflict with release workflow
         if: startsWith(github.event.commits[0].message, 'docs:')
-        uses: peter-evans/create-pull-request@v2.4.4
+        uses: peter-evans/create-pull-request@v3
         with:
           token: ${{ secrets.GH_TOKEN }}
           commit-message: 'chore: update generated docs'
