--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "test": "ava",
     "docs": "jsdoc2md src/customFilters.js > docs/api.md",
     "lint": "eslint --max-warnings 0 --config .eslintrc .",
-    "get-version": "echo $npm_package_version",
-    "get-name": "echo $npm_package_name",
+    "get:version": "echo $npm_package_version",
+    "get:name": "echo $npm_package_name",
     "release": "semantic-release",
-    "lint-fix": "eslint --fix --config .eslintrc ."
+    "lint:fix": "eslint --fix --config .eslintrc .",
+    "generate:assets": "npm run docs",
+    "bump:version": "npm --no-git-tag-version --allow-same-version version $VERSION"
   },
   "repository": {
     "type": "git",
