ci: split test script so unit tests can be executed isolated

--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "npm": ">6.13.7"
   },
   "scripts": {
-    "test": "jest --coverage && npm run test:integration",
-    "test:dev": "jest --watchAll --coverage",
+    "test": "npm run test:unit && npm run test:integration",
+    "test:unit": "jest --coverage",
+    "test:dev": "npm run test:unit -- --watchAll",
     "test:integration": "node cli.js https://bit.ly/asyncapi @asyncapi/html-template -o test/output --force-write && test -e test/output/index.html",
     "docs": "jsdoc2md lib/generator.js > docs/api.md",
     "release": "semantic-release",
