--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "lint:tpl:validator": "eslint --fix --config .eslintrc .github/templates-list-validator",
     "generate:readme:toc": "markdown-toc -i README.md",
     "generate:assets": "npm run docs && npm run generate:readme:toc",
-    "postinstall": "cd \"node_modules/npmi\" && npm install global-npm@0.4.1",
     "bump:version": "npm --no-git-tag-version --allow-same-version version $VERSION"
   },
   "preferGlobal": true,
@@ -57,7 +56,9 @@
     "@asyncapi/openapi-schema-parser": "^2.0.0",
     "@asyncapi/parser": "^1.4.0",
     "@asyncapi/raml-dt-schema-parser": "^2.0.0",
+    "@npmcli/arborist": "^2.2.4",
     "ajv": "^6.10.2",
+    "chokidar": "^3.4.0",
     "commander": "^6.1.0",
     "filenamify": "^4.1.0",
     "fs.extra": "^1.3.2",
@@ -68,11 +69,9 @@
     "markdown-it": "^8.4.1",
     "minimatch": "^3.0.4",
     "node-fetch": "^2.6.0",
-    "npmi": "^4.0.0",
     "nunjucks": "^3.2.0",
     "semver": "^7.3.2",
-    "simple-git": "^1.131.0",
-    "chokidar": "^3.4.0"
+    "simple-git": "^1.131.0"
   },
   "devDependencies": {
     "@semantic-release/commit-analyzer": "^8.0.1",
