--- a/.github/workflows/pr-testing-with-test-project.yml
+++ b/.github/workflows/pr-testing-with-test-project.yml
@@ -9,7 +9,7 @@ jobs:
   test:
     if: github.event.pull_request.draft == false
     name: Test generator as dependency with Node ${{ matrix.node }}
-    runs-on: ubuntu-latest
+    runs-on: macos-latest
     strategy:
       matrix:
         node: [ '12', '14', '15' ]
