adjust work dir in workflow

--- a/.github/workflows/pr-testing-with-test-project.yml
+++ b/.github/workflows/pr-testing-with-test-project.yml
@@ -25,3 +25,4 @@ jobs:
         working-directory: ./test/test-project
       - name: Run test
         run: npm test
+        working-directory: ./test/test-project
