--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
     "semver": "^7.3.2",
     "simple-git": "^1.131.0",
     "source-map-support": "^0.5.19",
-    "ts-node": "^9.1.1"
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.2"
   },
   "devDependencies": {
     "@semantic-release/commit-analyzer": "^8.0.1",
