integration tests and refactor

--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "test": "npm run test:unit && npm run test:integration && npm run test:cli",
     "test:unit": "jest --coverage --testPathIgnorePatterns=integration --testPathIgnorePatterns=test-project",
     "test:dev": "npm run test:unit -- --watchAll",
-    "test:integration": "jest --testPathPattern=integration --modulePathIgnorePatterns='./__mocks__'",
+    "test:integration": "npm run test:cleanup && jest --testPathPattern=integration --modulePathIgnorePatterns='./__mocks__'",
     "test:cli": "node cli.js ./test/docs/dummy.yml @asyncapi/html-template -o test/output --force-write && test -e test/output/index.html",
+    "test:cleanup": "rimraf \"test/temp\"",
     "docs": "jsdoc2md lib/generator.js > docs/api.md",
     "release": "semantic-release",
     "docker:build": "docker build -t asyncapi/generator:latest .",
@@ -71,12 +72,11 @@
     "minimatch": "^3.0.4",
     "node-fetch": "^2.6.0",
     "nunjucks": "^3.2.0",
+    "resolve-pkg": "^2.0.0",
     "semver": "^7.3.2",
     "simple-git": "^1.131.0"
   },
   "devDependencies": {
-    "@asyncapi/html-template": "0.17.0",
-    "@asyncapi/markdown-template": "^0.13.0",
     "@semantic-release/commit-analyzer": "^8.0.1",
     "@semantic-release/github": "^7.0.4",
     "@semantic-release/npm": "^7.0.6",
@@ -86,9 +86,11 @@
     "eslint": "^6.8.0",
     "eslint-plugin-jest": "^23.8.2",
     "eslint-plugin-sonarjs": "^0.5.0",
+    "fs-extra": "^9.1.0",
     "jest": "^25.5.0",
     "jsdoc-to-markdown": "^5.0.0",
     "markdown-toc": "^1.2.0",
+    "rimraf": "^3.0.2",
     "semantic-release": "^17.2.2",
     "unixify": "^1.0.0"
   },
