--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "commander": "^6.1.0",
     "filenamify": "^4.1.0",
     "fs.extra": "^1.3.2",
+    "global-dirs": "^3.0.0",
     "jmespath": "^0.15.0",
     "js-yaml": "^3.13.1",
     "levenshtein-edit-distance": "^2.0.5",
@@ -72,6 +73,7 @@
     "minimatch": "^3.0.4",
     "node-fetch": "^2.6.0",
     "nunjucks": "^3.2.0",
+    "resolve-from": "^5.0.0",
     "resolve-pkg": "^2.0.0",
     "semver": "^7.3.2",
     "simple-git": "^1.131.0",
