--- a/.github/workflows/pr-testing-with-test-project.yml
+++ b/.github/workflows/pr-testing-with-test-project.yml
@@ -20,11 +20,6 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: ${{ matrix.node }}
-      - name: Install generator
-        run: npm install
-      - name: Install dependencies in test project
-        run: npm install
-        working-directory: ./test/test-project
       - name: Run test
-        run: npm test
+        run: TAG=${{ matrix.node }} docker-compose up
         working-directory: ./test/test-project
