--- a/.github/workflows/pr-testing-with-test-project.yml
+++ b/.github/workflows/pr-testing-with-test-project.yml
@@ -9,7 +9,7 @@ jobs:
   test:
     if: github.event.pull_request.draft == false
     name: Test generator as dependency with Node ${{ matrix.node }}
-    runs-on: macos-latest
+    runs-on: ubuntu-latest
     strategy:
       matrix:
         node: [ '12', '14', '15' ]
@@ -17,5 +17,5 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Run test
-        run: TAG=${{ matrix.node }} docker-compose up --abort-on-container-exit
+        run: TAG=${{ matrix.node }} docker-compose up --abort-on-container-exit --remove-orphans
         working-directory: ./test/test-project
