--- a/test/test-project/docker-compose.yml
+++ b/test/test-project/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3'
 services:
   test:
     privileged: true
-    image: "node:${TAG}"
+    image: "node:${NODE_IMAGE_TAG}"
     volumes:
       - ../../:/app
     command: bash /app/test/test-project/test.sh
