--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "The AsyncAPI generator. It can generate documentation, code, anything!",
   "main": "./lib/generator.js",
   "bin": {
-    "asyncapi-generator": "./cli.js",
-    "ag": "./cli.js"
+    "asyncapi-generator": "cli.js",
+    "ag": "cli.js"
   },
   "engines": {
     "node": ">12.16",
@@ -43,10 +43,7 @@
     "generator",
     "markdown"
   ],
-  "author": {
-    "name": "Fran Mendez",
-    "email": "fmvilas@gmail.com"
-  },
+  "author": "Fran Mendez <fmvilas@gmail.com>",
   "publishConfig": {
     "access": "public"
   },
@@ -118,5 +115,10 @@
       "@semantic-release/npm",
       "@semantic-release/github"
     ]
+  },
+  "directories": {
+    "doc": "docs",
+    "lib": "lib",
+    "test": "test"
   }
 }
