refactor: all the debug logs extracted to a new separate file (#542)
Co-authored-by: Lukasz Gornicki <lpgornicki@gmail.com>

--- a/package.json
+++ b/package.json
@@ -43,10 +43,7 @@
     "generator",
     "markdown"
   ],
-  "author": {
-    "name": "Fran Mendez",
-    "email": "fmvilas@gmail.com"
-  },
+  "author": "Fran Mendez <fmvilas@gmail.com>",
   "publishConfig": {
     "access": "public"
   },
