--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "@asyncapi/avro-schema-parser": "^0.2.0",
     "@asyncapi/generator-react-sdk": "^0.2.3",
     "@asyncapi/openapi-schema-parser": "^2.0.0",
-    "@asyncapi/parser": "^1.4.2",
+    "@asyncapi/parser": "9999.0.0",
     "@asyncapi/raml-dt-schema-parser": "^2.0.0",
     "@npmcli/arborist": "^2.2.4",
     "ajv": "^6.10.2",
