--- a/test/docs/dummy.yml
+++ b/test/docs/dummy.yml
@@ -57,7 +57,7 @@ servers:
           - '5672'
     security:
       - user-password: []
-  dommy-kafka:
+  dummy-kafka:
     url: http://localhost:{port}
     protocol: kafka
     description: dummy Kafka broker
@@ -106,6 +106,19 @@ channels:
         is: routingKey
     subscribe:
       operationId: receiveSystemInfo
+      bindings:
+        amqp:
+          expiration: 100000
+          userId: guest
+          cc: [ 'user.logs' ]
+          priority: 10
+          deliveryMode: 2
+          mandatory: false
+          bcc: [ 'external.audit' ]
+          replyTo: user.signedup
+          timestamp: true
+          ack: false
+          bindingVersion: 0.1.0
       message:
         $ref: '#/components/messages/dummyInfo'
 
@@ -142,6 +155,22 @@ components:
             type: string
       payload:
         $ref: "#/components/schemas/dummyCreated"
+      bindings:
+        kafka:
+          key:
+            type: object
+            properties:
+              id:
+                type: string
+                format: uuid
+              type:
+                type: string
+                enum: [ 'type1', "type2" ]
+          bindingVersion: '0.1.0'
+        amqp:
+          contentEncoding: gzip
+          messageType: 'user.signup'
+          bindingVersion: 0.1.0
     dummyInfo:
       name: dummyInfo
       title: Dummy system info
@@ -167,7 +196,7 @@ components:
         - payload:
             prop1: option2
             sentAt: 2020-01-31T13:24:53Z
-          
+
 
   schemas:
     dummyCreated:
@@ -183,7 +212,7 @@ components:
                 type: integer
                 minimum: 0
       x-schema-extensions-as-primitive: dummy
-      x-schema-extensions-as-array: 
+      x-schema-extensions-as-array:
         - "item1"
         - "item2"
       properties:
@@ -305,4 +334,6 @@ components:
     kafka:
       bindings:
         kafka:
-          clientId: my-app-id
+          groupId: my-app-group-id
+          clientId: my-app-client-id
+          bindingVersion: '0.1.0'
