test: extend dummy test file with spec extension in a message

--- a/test/docs/dummy.yml
+++ b/test/docs/dummy.yml
@@ -171,6 +171,8 @@ components:
           contentEncoding: gzip
           messageType: 'user.signup'
           bindingVersion: 0.1.0
+      x-response:
+        $ref: "#/components/messages/dummyInfo"
     dummyInfo:
       name: dummyInfo
       title: Dummy system info
