update dummy example

--- a/test/docs/dummy.yml
+++ b/test/docs/dummy.yml
@@ -188,14 +188,14 @@ components:
       payload:
         $ref: "#/components/schemas/dummyInfo"
       examples:
-        - #name: option1example
-          #summary: this is dummy summary for option1example
+        - name: option1example
+          summary: this is dummy summary for option1example
           headers:
             my-app-header: 12
           payload:
             prop1: option1
             sentAt: 2020-01-31T13:24:53Z
-        - #name: headerExample
+        - name: headerExample
           headers:
             my-app-header: 13
         - payload:
