--- a/package.json
+++ b/package.json
@@ -72,9 +72,7 @@
     "resolve-pkg": "^2.0.0",
     "semver": "^7.3.2",
     "simple-git": "^1.131.0",
-    "source-map-support": "^0.5.19",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.2.2"
+    "source-map-support": "^0.5.19"
   },
   "devDependencies": {
     "@semantic-release/commit-analyzer": "^8.0.1",
@@ -91,7 +89,9 @@
     "markdown-toc": "^1.2.0",
     "rimraf": "^3.0.2",
     "semantic-release": "^17.2.2",
-    "unixify": "^1.0.0"
+    "unixify": "^1.0.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.2.2"
   },
   "release": {
     "branches": [
