--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -6,4 +6,4 @@
 
 # The default owners are automatically added as reviewers when you open a pull request unless different owners are specified in the file.
 
-* @fmvilas @derberg @magicmatatjahu @jonaslagoni @github-actions[bot]
+* @fmvilas @derberg @magicmatatjahu @jonaslagoni @asyncapi-bot-eve
