Added branch as prerelease

--- a/package.json
+++ b/package.json
@@ -96,7 +96,10 @@
   "release": {
     "branches": [
       "master",
-      "next-major"
+      {
+        "name": "next-major",
+        "prerelease": true
+      }
     ],
     "plugins": [
       [
