--- a/.github/workflows/update-docs-in-website.yml
+++ b/.github/workflows/update-docs-in-website.yml
@@ -37,6 +37,8 @@ jobs:
         run: |
           mkdir -p ./pages/docs/tools/generator
           cp -R ../generator/docs ./pages/docs/tools/generator
+          rm ../generator/docs/README.md
+          rm ../generator/docs/jsdoc2md-handlebars
           printf "\`\`\`\ntitle: Generator\nweight: 3\n\`\`\`" > _section.md
       - name: Commit and push
         working-directory: ./website
