--- a/package.json
+++ b/package.json
@@ -71,9 +71,7 @@
     "resolve-pkg": "^2.0.0",
     "semver": "^7.3.2",
     "simple-git": "^3.3.0",
-    "source-map-support": "^0.5.19",
-    "ts-node": "^10.9.1",
-    "typescript": "^4.9.3"
+    "source-map-support": "^0.5.19"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
@@ -83,6 +81,8 @@
     "jsdoc-to-markdown": "^7.1.1",
     "markdown-toc": "^1.2.0",
     "rimraf": "^3.0.2",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.3",
     "unixify": "^1.0.0"
   }
 }
