--- a/.github/workflows/update-docs-in-website.yml
+++ b/.github/workflows/update-docs-in-website.yml
@@ -38,8 +38,8 @@ jobs:
           mkdir -p ./pages/docs/tools/generator
           rm ../generator/docs/README.md
           rm -r ../generator/docs/jsdoc2md-handlebars
+          printf "%s\ntitle: Generator\nweight: 3\n%s" "---" "---"> ../generator/docs/_section.md
           cp -R ../generator/docs ./pages/docs/tools/generator
-          printf "\`\`\`\ntitle: Generator\nweight: 3\n\`\`\`" > _section.md
       - name: Commit and push
         working-directory: ./website
         run: |
