--- a/.github/workflows/update-docs-in-website.yml
+++ b/.github/workflows/update-docs-in-website.yml
@@ -39,7 +39,7 @@ jobs:
           rm ../generator/docs/README.md
           rm -r ../generator/docs/jsdoc2md-handlebars
           printf "%s\ntitle: Generator\nweight: 3\n%s" "---" "---"> ../generator/docs/_section.md
-          cp -R ../generator/docs ./pages/docs/tools/generator
+          mv ../generator/docs/*.md ./pages/docs/tools/generator
       - name: Commit and push
         working-directory: ./website
         run: |
