add talk for pratik

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -155,7 +155,8 @@
       "contributions": [
         "doc",
         "review",
-        "maintenance"
+        "maintenance",
+        "talk"
       ]
     }
   ],
