--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "ag": "./cli.js"
   },
   "engines": {
-    "node": ">12.16",
-    "npm": ">6.13.7"
+    "node": "^16.13.0 || >=18.0.0"
   },
   "scripts": {
     "test": "npm run test:unit && npm run test:integration && npm run test:cli",
@@ -52,7 +51,7 @@
     "@asyncapi/openapi-schema-parser": "^2.0.1",
     "@asyncapi/parser": "^1.18.0",
     "@asyncapi/raml-dt-schema-parser": "^2.0.1",
-    "@npmcli/arborist": "^2.2.4",
+    "@npmcli/arborist": "^6.2.5",
     "ajv": "^6.10.2",
     "chokidar": "^3.4.0",
     "commander": "^6.1.0",
@@ -67,6 +66,7 @@
     "minimatch": "^3.0.4",
     "node-fetch": "^2.6.0",
     "nunjucks": "^3.2.0",
+    "pacote": "^15.1.1",
     "resolve-from": "^5.0.0",
     "resolve-pkg": "^2.0.0",
     "semver": "^7.3.2",
