--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -9,4 +9,4 @@
 * @fmvilas @derberg @magicmatatjahu @jonaslagoni @asyncapi-bot-eve
 
 # All .md files
-*.md @Florence-Njeri @pratik2315
+*.md @Florence-Njeri @pratik2315 @asyncapi-bot-eve
