--- a/.github/workflows/update-docs-on-docs-commits.yml
+++ b/.github/workflows/update-docs-on-docs-commits.yml
@@ -8,6 +8,9 @@ on:
 jobs:
   docs-gen:
     name: 'Generate docs and create PR'
+    # PR should be created within this GH action only if it is a docs: commit
+    # Otherwise it will conflict with release workflow
+    if: startsWith(github.event.commits[0].message, 'docs:')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
@@ -18,11 +21,9 @@ jobs:
           node-version: 14
       - name: Install dependencies
         run: npm ci
-      - name: Regenerate docs
+      - name: Regenerate docsf
         run: npm run generate:assets
       - name: Create Pull Request with updated docs
-        # PR should be created within this GH action only if it is a docs: commit
-        # Otherwise it will conflict with release workflow
         if: startsWith(github.event.commits[0].message, 'docs:')
         uses: peter-evans/create-pull-request@v3
         with:
