--- a/.github/workflows/update-docs-on-docs-commits.yml
+++ b/.github/workflows/update-docs-on-docs-commits.yml
@@ -21,7 +21,7 @@ jobs:
           node-version: 14
       - name: Install dependencies
         run: npm ci
-      - name: Regenerate docsf
+      - name: Regenerate docs
         run: npm run generate:assets
       - name: Create Pull Request with updated docs
         if: startsWith(github.event.commits[0].message, 'docs:')
