--- a/.github/workflows/update-docs-on-docs-commits.yml
+++ b/.github/workflows/update-docs-on-docs-commits.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Regenerate docs
-        run: npm run generate:assets
+        run: npm run generate:assets --if-present
       - name: Create Pull Request with updated docs
         if: startsWith(github.event.commits[0].message, 'docs:')
         uses: peter-evans/create-pull-request@v3
