--- a/.github/workflows/update-docs-on-docs-commits.yml
+++ b/.github/workflows/update-docs-on-docs-commits.yml
@@ -8,21 +8,22 @@ on:
 jobs:
   docs-gen:
     name: 'Generate docs and create PR'
+    # PR should be created within this GH action only if it is a docs: commit
+    # Otherwise it will conflict with release workflow
+    if: startsWith(github.event.commits[0].message, 'docs:')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repo
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Setup Node.js
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
-          node-version: 14
+          node-version: 18
       - name: Install dependencies
         run: npm ci
       - name: Regenerate docs
-        run: npm run generate:assets
+        run: npm run generate:assets --if-present
       - name: Create Pull Request with updated docs
-        # PR should be created within this GH action only if it is a docs: commit
-        # Otherwise it will conflict with release workflow
         if: startsWith(github.event.commits[0].message, 'docs:')
         uses: peter-evans/create-pull-request@v3
         with:
