--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -1,7 +1,7 @@
 name: Release Docker Image
-on: 
+on:
   release:
-    types: 
+    types:
       - published
 
 jobs:
@@ -10,24 +10,35 @@ jobs:
     name: Docker build and push
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-        with:
-          ref: master
       - name: Get version without v character
         id: version
         run: |
           VERSION=${{github.event.release.tag_name}}
           VERSION_WITHOUT_V=${VERSION:1}
-          echo "::set-output name=value::$(echo $VERSION_WITHOUT_V)"
-      - name: Release to Docker
-        run: | 
-          echo ${{secrets.DOCKER_PASSWORD}} | docker login -u ${{secrets.DOCKER_USERNAME}} --password-stdin
-          sleep 1m #docker image installs generator from npm, this sleep protects this step from any delays on npm side
-          npm run docker:build
-          docker tag asyncapi/generator:latest asyncapi/generator:${{ steps.version.outputs.value }}
-          docker push asyncapi/generator:${{ steps.version.outputs.value }}
-          docker push asyncapi/generator:latest
+          echo "value=${VERSION_WITHOUT_V}" >> $GITHUB_OUTPUT
 
+      - name: Set Up QEMU
+        uses: docker/setup-qemu-action@v2
 
+      - name: Set Up Docker Buildx
+        uses: docker/setup-buildx-action@v2
 
+      - name: login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build Image
+        uses: docker/build-push-action@v4
+        with:
+          push: true
+          load: false
+          build-args: |
+            ASYNCAPI_GENERATOR_VERSION=${{ steps.version.outputs.value }}
+          tags: |
+            asyncapi/generator:${{ steps.version.outputs.value }}
+            asyncapi/generator:latest
+          platforms: linux/amd64,linux/arm64
+          cache-from: type=gha
+          cache-to: type=gha
