--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "@asyncapi/avro-schema-parser": "^3.0.2",
     "@asyncapi/generator-react-sdk": "^0.2.23",
     "@asyncapi/openapi-schema-parser": "^3.0.3",
-    "@asyncapi/parser": "^2.0.3",
+    "@asyncapi/parser": "^2.1.0-next-major-spec.3",
     "@asyncapi/raml-dt-schema-parser": "^4.0.3",
     "@npmcli/arborist": "^2.2.4",
     "ajv": "^8.12.0",
