--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@asyncapi/openapi-schema-parser": "^3.0.4",
     "@asyncapi/parser": "^2.1.0",
     "@asyncapi/raml-dt-schema-parser": "^4.0.4",
+    "@asyncapi/protobuf-schema-parser": "3.0.0",
     "@npmcli/arborist": "^2.2.4",
     "ajv": "^8.12.0",
     "chokidar": "^3.4.0",
