chore: remove pratik2315 as a codeowner (#1014)

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -9,4 +9,4 @@
 * @derberg @magicmatatjahu @jonaslagoni @asyncapi-bot-eve
 
 # All .md files
-*.md @Florence-Njeri @pratik2315 @asyncapi-bot-eve
+*.md @Florence-Njeri @derberg @asyncapi-bot-eve
