--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,2 +1,2 @@
 #we need to explicitly exclude them as some are commit to the repo
-sonar.exclusions=test/test-project/node_modules/@asyncapi/html-template/**/*
+sonar.exclusions=test/**/*
