increase complexity threshhold

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,2 +1,3 @@
 #we need to explicitly exclude them as some are commit to the repo
 sonar.exclusions=test/**/*
+sonar.cpd.cognitivecomplexity.threshold=20
