--- a/package.json
+++ b/package.json
@@ -50,8 +50,8 @@
   "dependencies": {
     "@asyncapi/generator-react-sdk": "^0.2.23",
     "@asyncapi/parser": "2.1.0",
-    "@smoya/multi-parser": "3.0.0",
     "@npmcli/arborist": "^2.2.4",
+    "@smoya/multi-parser": "^4.0.0",
     "ajv": "^8.12.0",
     "chokidar": "^3.4.0",
     "commander": "^6.1.0",
