--- a/.github/workflows/release-docker.yml
+++ b/.github/workflows/release-docker.yml
@@ -46,3 +46,11 @@ jobs:
           platforms: linux/amd64,linux/arm64
           cache-from: type=gha
           cache-to: type=gha
+
+      - name: Update Docker Hub Readme
+        uses: meeDamian/sync-readme@v1.0.6
+        with:
+           user: ${{ secrets.DOCKER_USERNAME }}
+           pass: ${{ secrets.DOCKER_PASSWORD }}
+           slug: asyncapi/generator
+           description: Use your AsyncAPI definition to generate literally anything. Markdown documentation, Node.js code, HTML documentation, anything!
