update sonar properties

--- a/.sonarcloud.properties
+++ b/.sonarcloud.properties
@@ -1,2 +1,2 @@
 #we need to explicitly exclude them as some are commit to the repo
-sonar.exclusions=test/**/*
+sonar.exclusions=test/**/* , test/test-project/**/*
