--- a/test/test-project/docker-compose.yml
+++ b/test/test-project/docker-compose.yml
@@ -21,6 +21,8 @@ services:
   test-registry:
     privileged: true
     image: "node:${NODE_IMAGE_TAG}"
+    environment:
+     - PUPPETEER_SKIP_CHROMIUM_DOWNLOAD = true
     volumes:
       - ../../:/app
     command: bash /app/test/test-project/test.sh test-registry
